Bug 306997 - impossible to open an existing contact by right click in kmail
Summary: impossible to open an existing contact by right click in kmail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-18 19:43 UTC by Christian Trippe
Modified: 2012-09-22 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Trippe 2012-09-18 19:43:57 UTC
It is very usefull when adding a new contact from a mail to be able to edit the
contact. With kmail1 one could right-click on the mail adress and if the contact was
already in the database, the menu had the option "open the contact".

With kamil2 even if the contact already exists, the menu still give
the opportunity to "add the contact" instead of proposing to "edit the
contact".



Reproducible: Always
Comment 1 Laurent Montel 2012-09-19 08:26:12 UTC
Yes I saw if some week ago and debug it.
I have a solution but this week I am busy :)
Will fix it this WE or next week.

And I improve it for 4.10 it will not open kaddressbook but just open an addressbook edit contact.
It's better.
Comment 2 Christian Trippe 2012-09-19 17:51:53 UTC
Thanks for the quick response. All your work on kmail is really much appreciated!
Comment 3 Laurent Montel 2012-09-22 21:32:25 UTC
Git commit 6a82bbde977927c29f29380c3c7a82330e526bae by Montel Laurent.
Committed on 22/09/2012 at 20:55.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix 306997 impossible to open an existing contact by right click in

kmail

FIXED-IN: 4.9.2

M  +47   -47   akonadi/contact/contactsearchjob.cpp

http://commits.kde.org/kdepimlibs/6a82bbde977927c29f29380c3c7a82330e526bae