Fix 306997 impossible to open an existing contact by right click in

kmail

FIXED-IN: 4.9.2
BUG: 306997